app/assets/stylesheets/base.scss
/* ... */
.document-link {

  .button {
    min-height: 0;
  }
}

.tabs {
  border-bottom: 4px solid $light;

  .tabs-title {
    margin-bottom: 0;

    > a {

      &:focus,
      &[aria-selected="true"] {
        background: transparent;
      }

      &[aria-selected="true"]::after,
      .is-active::after {
        border-bottom: 4px solid $brand;
        bottom: -4px;
      }
    }
  }
}

.align-bottom {
  vertical-align: bottom;
}

.recommended-index {
  margin-top: rem-calc(-48);
  padding-top: $line-height;

  .hide-recommendations {
    top: -24px;
  }
}

.tags label {
  display: none;
}

.label-title {
  color: $label;
  font-size: $small-font-size;
  text-transform: uppercase;
}

.wide-order-selector {
  margin-top: 0;

  label {
    float: none;
    font-size: $small-font-size;
    text-transform: uppercase;
  }

  select {
    color: $label;
    width: auto;
  }
}

.delete-comment {
  color: $brand;
}

.callout a {
  font-size: $small-font-size !important;
}

.link-to-top {
  background: rgba(226, 226, 226, 0.5);
  border-radius: rem-calc(6);
  bottom: 12px;
  display: table;
  height: rem-calc(48);
  position: fixed;
  right: 24px;
  width: rem-calc(48);

  a {
    color: $text;
    display: table-cell;
    font-size: rem-calc(24);
    text-align: center;
    text-decoration: none;
    vertical-align: middle;
    width: 100%;
  }
}

// 1. Header
// --------------------
header,
body > header,
.wrapper > header {
  background: none;
  border-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

.top-bar {
  background: #fff !important;
  justify-content: space-between;

  @include breakpoint(small only) {

    .menu {
      margin-bottom: 0;
    }
  }

  .menu > li {

    a {
      line-height: $line-height;
    }

    a,
    .button {
      background: none;
      border: 0;
      color: $text;
      min-height: 0;
    }
  }

  .dropdown {

    &.menu > li {

      &.is-active > a {
        color: $text;
      }
    }
  }
}

.top-bar-title {
  background: $brand;
  margin: 0;
  position: relative;

  @include breakpoint(medium) {
    padding-bottom: $line-height;
    padding-top: $line-height;

    &::before {
      background: $brand;
      content: "";
      height: 100%;
      left: -999%;
      position: absolute;
      top: 0;
      width: 999%;
      z-index: -1;
    }
  }

  a {
    display: block;
    height: rem-calc(80);
    width: 100%;

    img {
      height: 100% !important;
    }
  }
}

.top-bar .top-bar-title {

  @include breakpoint(medium) {
    flex: unset;
    flex-grow: unset;
  }
}

.top-bar-right {

  @include breakpoint(medium) {
    padding-top: $line-height;
  }

  a {
    position: relative;

    &.hide-for-small-only {

      &::after {
        content: "\f078" !important;
        font-family: "Font Awesome 5 Free";
        font-size: rem-calc(12);
        font-weight: bold;
        position: absolute;
        right: 12px !important;
        top: 10px;
      }
    }
  }

  .menu {
    padding-left: $line-height / 2;
  }
}

.menu-icon {
  @include hamburger($color: $brand, $color-hover: $brand);

  &.dark {

    &::after,
    &:hover::after {
      background: $brand;
      box-shadow: 0 7px 0 $brand, 0 14px 0 $brand;
    }
  }
}

.menu-icon.dark::after,
.menu-icon.dark:hover::after {
  background: $brand;
  box-shadow: 0 7px 0 $brand, 0 14px 0 $brand;
}

.menu-button {
  color: $brand;
  margin-left: $line-height / 4;
}

.subnavigation {
  background: $light;

  @include breakpoint(medium) {
    padding: $line-height / 2 0;
  }
}

.subnavigation a {
  color: $text;
  font-size: 16px;
  line-height: $line-height * 2;
  position: relative;

  @include breakpoint(medium) {

    &.is-active {
      border-bottom: 0;
    }

    &.is-active::after {
      background: $brand;
      bottom: -12px;
      content: "";
      height: 4px;
      left: 0;
      position: absolute;
      width: 100%;
    }
  }

  &:hover,
  &.is-active {
    color: $brand;
  }
}

.subnavigation ul li {

  @include breakpoint(medium) {
    margin-right: $line-height / 2;
  }
}

.additional-content .filter-subnav {
  background: $light;
}

.submit-form-box {
  border-color: $light;
}

.subnavigation {

  .dropdown.menu > li {

    &.opens-left > .is-dropdown-submenu {
      background: #fff;

      @include breakpoint(small only) {
        width: 100%;
      }
    }

    &.is-dropdown-submenu-parent {

      > a {

        @include breakpoint(small only) {
          display: inline;
        }

        &.is-active::after {
          border: 0;
          height: 4px;
          left: 0;
          top: unset;
          width: calc(100% + 8px);
        }
      }

      > a::before {
        border: inset 6px;
        border-bottom-width: 0;
        border-color: $brand transparent transparent;
        border-top-style: solid;
        content: "";
        display: block;
        position: absolute;
        right: -8px;
        top: 20px;

        @include breakpoint(small only) {
          right: -10px;
          top: 8px;
        }
      }
    }

    &.is-active > a {
      color: $brand;
    }

    > a {
      padding-bottom: 0;
      padding-top: 0;
    }

    a {
      font-size: 16px;
      padding-right: $line-height / 2;

      @include breakpoint(small only) {
        line-height: $line-height * 2;
      }

      @include breakpoint(medium) {
        padding-left: $line-height / 2;
      }
    }
  }

  .dropdown .is-dropdown-submenu {
    background: #fff;
    min-width: rem-calc(240);
    width: max-content;

    li {
      display: block;
    }

    a {
      display: block;
      font-size: $small-font-size;
      padding: 0 $line-height / 2;
      width: 100%;
    }
  }
}

.dropdown.menu > li {

  &.is-dropdown-submenu-parent > a::after {
    border-top-color: transparent;
    margin-top: -8px;
  }
}
/* ... */

